--- a/FleaMarket/FleaMarket/Properties/launchSettings.json
+++ b/FleaMarket/FleaMarket/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "FleaMarket": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:7286;http://localhost:5031",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
