--- a/FleaMarket/FleaMarket/FleaMarket.csproj
+++ b/FleaMarket/FleaMarket/FleaMarket.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="MailKit" Version="4.1.0" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.21" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.21" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
@@ -19,12 +20,15 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="MimeKit" Version="4.1.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
       <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="Filters" />
+      <Folder Include="SendMessageOnEmail" />
     </ItemGroup>
 
 </Project>
